# food-detection

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: pipeline.py
src/depth/: estimator.py
src/detection/: detector.py
src/metrics/: calculator.py
src/processing/: liquid.py
src/utils/: visualizer.py
